components/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyseerr.hl.ancalagon.black`)
      priority: 10
      services:
        - name: jellyseerr-svc
          port: 80
  tls:
    certResolver: default
